--- a/package.json
+++ b/package.json
@@ -18,8 +18,12 @@
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
     "method-override": "^3.0.0",
+    "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "sequelize": "^5.10.1",
+    "sequelize-cli": "^5.5.0",
+    "yargs": "^13.3.0"
   }
 }
