--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "10.15.0",
+    "npm": "6.9.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -19,12 +23,14 @@
     "express": "^4.17.1",
     "express-handlebars": "^3.1.0",
     "express-session": "^1.16.2",
+    "heroku-cli": "^7.0.9",
     "method-override": "^3.0.0",
     "mysql2": "^1.6.5",
     "nodemon": "^1.19.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
+    "pg": "^7.11.0",
     "sequelize": "^5.10.1",
     "sequelize-cli": "^5.5.0",
     "yargs": "^13.3.0"
